force-app/main/default/objects/ProgrammableWalletsSetting__c/ProgrammableWalletsSetting__c.object-meta.xml
<CustomObject>
    <label>Programmable Wallets Setting</label>
    <nameField>
        <displayFormat>SPWS-{000000}</displayFormat>
        <label>Programmable Wallets Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programmable Wallets Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>