force-app/main/default/objects/ProgrammableWalletsSetting__c/fields/ConsoleRegistered__c.field-meta.xml
<CustomField>
    <fullName>ConsoleRegistered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Console Registered</label>
    <type>Checkbox</type>
</CustomField>