force-app/main/default/objects/ProgrammableWalletsSetting__c/fields/EntityPublicKey__c.field-meta.xml
<CustomField>
    <fullName>EntityPublicKey__c</fullName>
    <label>Entity Public Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>