force-app/main/default/objects/ProgrammableWalletsSetting__c/fields/EntitySecret__c.field-meta.xml
<CustomField>
    <fullName>EntitySecret__c</fullName>
    <label>Entity Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>