force-app/main/default/objects/ProgrammableWalletsSetting__c/fields/EntitySecretCiphertext__c.field-meta.xml
<CustomField>
    <fullName>EntitySecretCiphertext__c</fullName>
    <label>Entity Secret Ciphertext</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>