force-app/main/default/objects/ProgrammableWalletsSetting__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>